     - Remove all special-cases in the clean rules, the upstream one does
       its job properly.
     - Get rid of the attempt at detecting files that are installed
       nowhere, using the --list-failing dh_install option instead.
  * Merge Ubuntu patches, by Martin Pitt (thanks!):
     - Update Build-Depends: Move from libltdl3-dev to libltdl-dev
       (Closes: #531974).

 -- Cyril Brulebois <kibi@debian.org>  Thu, 30 Jul 2009 14:00:01 +0200

libgphoto2 (2.4.6-1) unstable; urgency=low

  * New upstream release.
  * Fix FTBFS on GNU/kFreeBSD, thanks to Aurélien Jarno (Closes: #528380):
     - Only install udev-related files on Linux architectures.
     - Add a patch to fix a missing include (“struct in_addr” comes from
       <netinet/in.h> and needs to be explicitly included when on a
       non-Linux architecture): 80_kfreebsd
  * No longer call “udev reload”, rules files are said to be reloaded
    automatically (Closes: #523957):
     - debian/libgphoto2-2.post{inst,rm}

 -- Cyril Brulebois <kibi@debian.org>  Mon, 18 May 2009 10:03:08 +0200

libgphoto2 (2.4.5-1) unstable; urgency=low

  * New upstream release:
     - Fix typo on the “Nikon:CoolPix 4500” line (Closes: #342170).
     - Fix support for Canon EOS 5D Mark II (Closes: #520745). Thanks to
       Wolfram Quester for the report.
     - Fix support for Nikon CoolPix S60 (Closes: #520752). Thanks to
       Mathias Brodala for the report.
  * Disable patch:
     - 11_hurd_no_path_max_bsdsource: Disable for now, no longer applies.
  * Drop patch:
     - 60_udev_rules_are_autogenerated_notice: Merged upstream.
  * debian/rules:
     - Do not bump shlibs (no new symbols).
  * debian/control:
     - Bump Standards-Version from 3.8.0 to 3.8.1 (no changes needed).

 -- Cyril Brulebois <kibi@debian.org>  Wed, 08 Apr 2009 23:31:43 +0200

libgphoto2 (2.4.4-1) unstable; urgency=low

  * New upstream release.
  * debian/copyright:
     - Update accordingly.
  * debian/rules: