@@ -1,1 +1,0 @@
-etc/udev/rules.d
