@@ -16,25 +16,6 @@ case "$1" in
 	rm -f /usr/share/hal/fdi/information/10freedesktop/10-camera-$PACKAGE.fdi
 	rm -f /usr/share/hal/fdi/information/20thirdparty/$PACKAGE.fdi
 	rm -f /usr/share/hal/fdi/information/10freedesktop/10-camera-$PACKAGE-device.fdi
-
-	# create udev rules file
-	if [ -d /etc/udev/ ]; then
-	    /usr/lib/$PACKAGE/print-camera-list udev-rules version 0.98 mode 0664 group plugdev > /etc/udev/$PACKAGE.rules
-	    # install the udev file only once:
-	    #    - the first time the package is installed
-	    # OR - the first time the package is upgraded from a version earlier than 2.1.6-5.1
-	    if [ -z "$2" ] || dpkg --compare-versions "$2" lt 2.1.6-5.1 ; then
-		ln -sf ../$PACKAGE.rules /etc/udev/rules.d/025_$PACKAGE.rules
-	    fi
-
-	    if [ -L /etc/udev/rules.d/020_libgphoto2_generic-ptp_support.rules ]; then
-	    	rm -f /etc/udev/rules.d/020_libgphoto2_generic-ptp_support.rules
-	    fi
-
-	    if [ -f /etc/udev/libgphoto2_generic-ptp_support.rules ]; then
-	    	rm -f /etc/udev/libgphoto2_generic-ptp_support.rules
-	    fi
-	fi
 	;;
 
     abort-upgrade|abort-remove|abort-deconfigure)
