@@ -38,13 +38,20 @@ override_dh_auto_install:
 
 override_dh_install:
 	dh_install --list-missing
-ifeq ($(DEB_HOST_ARCH_OS),linux)
-	install -D packaging/generic/check-ptp-camera debian/libgphoto2-$(major)/lib/udev/check-ptp-camera
-	rm debian/tmp/usr/lib/udev/check-ptp-camera
+	# Double-check that and act accordingly:
 	-test -e debian/tmp/usr/lib/udev/check-mtp-device && \
 		mkdir -p debian/libgphoto2-port0/lib/udev && \
 		mv debian/tmp/usr/lib/udev/check-mtp-device \
 			debian/libgphoto2-port0/lib/udev/check-mtp-device
+
+ifeq ($(DEB_HOST_ARCH_OS),linux)
+override_dh_installudev:
+	# No longer needed with current udev. But check with non-Linux architectures stuff:
+	# rm debian/libgphoto2-2/lib/udev/check-ptp-camera
+	# Generate the udev file, get it installed, and clean:
+	./packaging/generic/print-camera-list udev-rules version 136 mode 0664 group plugdev > debian/libgphoto2-$(major).udev
+	dh_installudev
+	rm debian/libgphoto2-$(major).udev
 endif
 
 override_dh_fixperms:
@@ -61,7 +68,7 @@ override_dh_gencontrol:
 	dh_gencontrol -plibgphoto2-$(major)-dev
 	dh_gencontrol -plibgphoto2-port0
 ifeq (linux,$(DEB_HOST_ARCH_OS))
-	dh_gencontrol -plibgphoto2-$(major) -- -Vudev-hotplug='udev (>= 0.113-1)'
+	dh_gencontrol -plibgphoto2-$(major) -- -Vudev-hotplug='udev (>= 0.136)'
 else
 	dh_gencontrol -plibgphoto2-$(major)
 endif
